--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ plugins {
     id 'base'
     id 'org.jetbrains.kotlin.jvm' version '1.3.71' apply false
     id 'com.github.johnrengelman.shadow' version '5.0.0' apply false
+
+    id 'org.gradle.crypto.checksum' version '1.1.0'
 }
+
+import org.gradle.crypto.checksum.Checksum
 
 ext.versions = [
     'kotlin': '1.3.71',
@@ -76,14 +80,17 @@ tasks.register('makeDist', DefaultTask.class) {
         mkdir "$buildDir/dist"
         subprojects.each { subproject ->
             copy {
-                from "${subproject.buildDir}/run/*"
+                from "${subproject.buildDir}/run/"
                 into "$buildDir/dist/"
             }
         }
         fileTree("$buildDir/dist").visit { FileVisitDetails details ->
-            /*exec {
-                commandLine "sha512sum", "${details.file.path}"
-            }*/
+            ant.checksum(
+                file: details.file,
+                fileext: '.sha512',
+                algorithm: "SHA-512",
+                pattern: "{0} {1}"
+            )
         }
     }
 }
